- Updated to avoid "Jump" when played.

--- a/pages/blocks/video/video.css
+++ b/pages/blocks/video/video.css
@@ -2,6 +2,12 @@
   max-width: 100%;
 }
 
+.video video.centered {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
 .video .video-placeholder {
   width: 100%;
   aspect-ratio: 16 / 9;
